# othello

./: .gitignore  1.othello.js  Cargo.toml  README.md  othello.js  package.json  pyproject.toml  pytorch_and_onnx_quantization.ipynb  style.css  webpack.config.js
models/: model.onnx
othello/: .gitignore  Cargo.toml
othello-alphazero/: .gitignore  Cargo.toml  README.md  pyproject.toml
othello-alphazero/models/: latest.ckpt  model.onnx
othello-alphazero/selfplay/: main.rs  vs_random.rs
othello-alphazero/train_model/: experiment.ipynb  export_onnx.py  main.py  pytorch_and_onnx_quantization.ipynb  test.ipynb
othello-wasm/: Cargo.toml  README.md  bootstrap.js  package.json  webpack.config.js
othello-wasm/src/: app.rs
othello/src/: othello_logic.rs  players.rs  utils.rs
othello/src/players/: alphazero.rs  greedy.rs  mcts.rs
othello/src/players/nn_model/: model.onnx
othello_alphazero/: export_onxx.py  train_model.ipynb  train_model.py
selfplay/: main.rs  vs_random.rs
src/: app.rs  board.rs  game.rs  lib.rs  othello_logic.rs  players.rs  utils.rs
src/players/: alphazero.rs  random.rs
static/: index.html
tests/: test_othello_alphazero.py
train_model/: train_model.py
