[package]
name = "selfplay"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
othello = {git="https://github.com/near129/othello.git", branch="feature/alphazero"}
ndarray = "0.15.3"
ndarray-npy = "0.8.0"
anyhow = "*"
indicatif = "0.16.2"
tokio = { version = "0.2", features = ["full"] }
futures = "*"
[[bin]]
name = "selfplay"
path = "selfplay/main.rs"
[[bin]]
name = "vs_random"
path = "selfplay/vs_random.rs"
