[package]
edition = "2018"
name = "othello-wasm"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.53"
log = "0.4"
othello = {git = "https://github.com/near129/othello.git", branch = "feature/alphazero"}
serde = "1"
serde_derive = "1"
strum = "0.19"
strum_macros = "0.19"
wasm-bindgen = "0.2.58"
wasm-logger = "0.2"
wee_alloc = {version = "0.4.4", optional = true}
yew = "0.17"
# othello = {path="../othello"}
getrandom = {version = "0.2", features = ["js"]}

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'Window',
]
version = "0.3.4"
[package.metadata.wasm-pack.profile.release]
wasm-opt = false