[package]
edition = "2018"
name = "selfplay"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
futures = "*"
indicatif = "0.16.2"
ndarray = "0.15.3"
ndarray-npy = "0.8.0"
othello = {git = "https://github.com/near129/othello.git", branch = "feature/alphazero"}
tokio = {version = "0.2", features = ["full"]}
[[bin]]
name = "selfplay"
path = "selfplay/main.rs"
[[bin]]
name = "vs_random"
path = "selfplay/vs_random.rs"
