[tool.poetry]
name = "train_model"
version = "0.1.0"
description = ""
authors = ["near129"]

[tool.poetry.dependencies]
python = ">=3.7, <3.10"
numpy = "^1.21.2"
torch = "^1.9.0"
pytorch-lightning = "^1.4.4"
plotly = "^5.2.2"
torchvision = "^0.10.0"
torch-tb-profiler = "^0.2.1"
scipy="^1.7.1"
scikit-learn = "^0.24.2"
tensorboard = "^2.6.0"
typer = "^0.4.0"
mypy = "^0.910"
onnx = "^1.10.1"
timm = "^0.4.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
